// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`properly renders with basic children 1`] = `
<div
  className="h-screen px-12 py-12"
>
  <div
    className="w-full h-full"
  >
    <h1>
      I am a child
    </h1>
    <h2>
      I am a smaller child
    </h2>
  </div>
</div>
`;

exports[`properly renders with component children 1`] = `
<div
  className="h-screen px-12 py-12"
>
  <div
    className="w-full h-full"
  >
    <div
      className="w-full mb-2"
    >
      <div
        className="flex justify-center"
      >
        <label
          className="sr-only"
          htmlFor="city"
        >
          City
        </label>
        <input
          className="w-full block shadow-sm focus:ring-blue-500 focus:border-blue-500 border-gray-300 rounded-md"
          data-testid="location-input"
          name="city"
          onChange={[Function]}
          placeholder="Enter a City"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`properly renders with no children 1`] = `
<div
  className="h-screen px-12 py-12"
>
  <div
    className="w-full h-full"
  />
</div>
`;
